<resources>
    <string name="app_name">Eyal\'s First Portal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="choose_app">Click on the buttons below</string>
    <string name="welcome">Welcome!</string>
    <string name="spotify_launch">Spotify Streamer</string>
    <string name="football_launch">Football Scores</string>
    <string name="library_launcher">Library App</string>
    <string name="bigger_launcher">Build It Bigger</string>
    <string name="reader_launcher">XYZ Reader</string>
    <string name="capstone_launcher">Capstone : Oh My Baby</string>
</resources>
