<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    style="@style/AppTheme"
    android:background="#E0F7FA">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#00838F" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choose_app"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="#006064" />



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"> <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_launch"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:onClick="spotifyStreamer_OnClick"
        style="@style/BasicButton"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/spotify" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/football_launch"
            android:id="@+id/button2"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:onClick="footballScores_OnClick"
            style="@style/BasicButton"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/football"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/library_launcher"
            android:id="@+id/button3"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true"
            android:onClick="libraryApp_OnClick"
            style="@style/BasicButton"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/library"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/bigger_launcher"
            android:id="@+id/button4"
            android:layout_below="@+id/button3"
            android:layout_centerHorizontal="true"
            android:onClick="buildItBigger_OnClick"
            style="@style/BasicButton"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/database"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/reader_launcher"
            android:id="@+id/button5"
            android:layout_below="@+id/button4"
            android:layout_centerHorizontal="true"
            android:onClick="xyzReader_OnClick"
            style="@style/BasicButton"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/capstone_launcher"
            android:id="@+id/button6"
            android:layout_below="@+id/button5"
            android:layout_centerHorizontal="true"
            android:onClick="ohMyBaby_OnClick"
            style="@style/UniqueButton"
            android:layout_marginBottom="10dp" /></RelativeLayout></ScrollView>
</RelativeLayout>
